--- a/style.css
+++ b/style.css
@@ -1,8 +1,549 @@
 body {
-    background-image: url(/build.jpg);
-    background-repeat: no-repeat;
-    background-size: auto;
-    height: 100%;
-    width: 100%;
-    background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgb(43, 43, 43);
 }
+
+/*NavBar*/
+.container-fluid {
+  background-color: rgba(65, 65, 65, 0.5);
+  border: 1px solid white;
+  margin-top: 2%;
+}
+
+.title {
+  font-size: 250%;
+  font-family: "Nanum Brush Script", cursive;
+  color: #c08bb7;
+}
+
+.navbar {
+  width: 85%;
+  margin: auto;
+  padding: 20px 0px;
+  display: flex;
+  align-items: center;
+  font-size: 180%;
+}
+
+.navbar ul li {
+  list-style: none;
+  display: inline-block;
+  margin: 0 20px;
+  position: relative;
+}
+
+.navbar ul li a {
+  text-decoration: none;
+  color: white;
+  text-shadow: 2px 2px 2px black;
+  font-family: "Bebas Neue", sans-serif;
+}
+
+.navbar ul li::after {
+  content: "";
+  height: 3px;
+  width: 0;
+  background: #c08bb7;
+  position: absolute;
+  left: 0;
+  bottom: -10px;
+  transition: 0.5s;
+}
+
+.navbar ul li:hover::after {
+  width: 100%;
+  background-color: #c08bb7;
+}
+
+/*NavBar End*/
+
+/*Life / Early Years*/
+hr {
+  margin-top: 3%;
+  color: rgb(0, 0, 0);
+  box-shadow: 2px 2px 2px white;
+}
+/* Font */
+@import url("https://fonts.googleapis.com/css?family=Quicksand:400,700");
+
+/* Design */
+.content {
+  font-family: "Bebas Neue", sans-serif;
+  text-align: center;
+  padding: 50px 40px;
+}
+
+.title1 {
+  color: #000000;
+  text-shadow: 2px 2px 2px #747474;
+  font-size: 350%;
+  font-family: "Permanent Marker", cursive;
+  letter-spacing: 2px;
+  word-spacing: 3px;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+body {
+  color: #272727;
+  font-family: "Quicksand", serif;
+  font-style: normal;
+  font-weight: 400;
+  letter-spacing: 0;
+  padding: 1rem;
+}
+
+.main {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+img {
+  height: auto;
+  max-width: 100%;
+  vertical-align: middle;
+}
+
+.btn {
+  color: #ffffff;
+  padding: 0.8rem;
+  font-size: 14px;
+  text-transform: uppercase;
+  border-radius: 4px;
+  font-weight: 400;
+  display: block;
+  width: 100%;
+  cursor: pointer;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  background: transparent;
+  font-family: "PT Sans", sans-serif;
+}
+
+.btn:hover {
+  background-color: rgba(122, 214, 104, 0.486);
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.cards_item {
+  display: flex;
+  padding: 1rem;
+}
+
+@media (min-width: 40rem) {
+  .cards_item {
+    width: 50%;
+  }
+}
+
+@media (min-width: 56rem) {
+  .cards_item {
+    width: 33.3333%;
+  }
+}
+
+.card {
+  background-color: #203755;
+  border-radius: 0.25rem;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  box-shadow: 3px 3px 3px black;
+}
+
+.card_content {
+  padding: 1rem;
+  background: linear-gradient(to bottom left, #203755 40%, #203755 100%);
+}
+
+.card_title {
+  color: #ffffff;
+  font-size: 2.5rem;
+  font-weight: 600;
+  letter-spacing: 3px;
+  text-transform: capitalize;
+  margin: 0px;
+  text-shadow: 2px 2px 2px black;
+  font-family: "Signika", sans-serif;
+  text-align: center;
+}
+
+.card_text {
+  padding: 5px 0;
+  text-align: center;
+  margin-top: 3%;
+  color: white;
+  text-shadow: 2px 2px 2px #3b3b8c;
+  font-family: "Josefin Sans", sans-serif;
+}
+
+/*Life / Early Years End*/
+/*Greatest Accomplishments*/
+
+.blog-card {
+  display: flex;
+  flex-direction: column;
+  margin: 1rem auto;
+  box-shadow: 0 3px 7px -1px rgba(0, 0, 0, 0.1);
+  margin-bottom: 1.6%;
+  background: #ffffff;
+  line-height: 1.4;
+  font-family: sans-serif;
+  border-radius: 5px;
+  overflow: hidden;
+  z-index: 0;
+  border: 2px solid #272727;
+}
+.blog-card a {
+  color: inherit;
+}
+.blog-card a:hover {
+  color: white;
+}
+.blog-card:hover .photo {
+  transform: scale(1.3) rotate(3deg);
+}
+.blog-card .meta {
+  position: relative;
+  z-index: 0;
+  height: 200px;
+}
+.blog-card .photo {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-size: cover;
+  background-position: center;
+  transition: transform 0.2s;
+}
+.blog-card .details,
+.blog-card .details ul {
+  margin: auto;
+  padding: 0;
+  list-style: none;
+}
+.blog-card .details {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: -100%;
+  margin: auto;
+  transition: left 0.2s;
+  background: rgba(0, 0, 0, 0.6);
+  color: #fff;
+  padding: 10px;
+  width: 100%;
+  font-size: 0.9rem;
+}
+.blog-card .details a {
+  text-decoration: dotted underline;
+}
+.blog-card .details ul li {
+  display: inline-block;
+}
+.blog-card .details .author:before {
+  font-family: FontAwesome;
+  margin-right: 10px;
+  content: "\f007";
+}
+.blog-card .details .date:before {
+  font-family: FontAwesome;
+  margin-right: 10px;
+  content: "\f133";
+}
+.blog-card .details .tags ul:before {
+  font-family: FontAwesome;
+  content: "\f02b";
+  margin-right: 10px;
+}
+.blog-card .details .tags li {
+  margin-right: 2px;
+}
+.blog-card .details .tags li:first-child {
+  margin-left: -4px;
+}
+.blog-card .description {
+  padding: 1rem;
+  background: #fff;
+  position: relative;
+  z-index: 1;
+}
+.blog-card .description h1,
+.blog-card .description h2 {
+  font-family: "Josefin Sans", sans-serif;
+}
+.blog-card .description h1 {
+  line-height: 1;
+  margin: 0;
+  font-size: 1.7rem;
+  margin-top: 2.5%;
+}
+.blog-card .description h2 {
+  font-size: 1rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  color: #a2a2a2;
+  margin-top: 5px;
+}
+.blog-card .description .read-more {
+  text-align: right;
+}
+.blog-card .description .read-more a {
+  color: white;
+  display: inline-block;
+  position: relative;
+}
+.blog-card .description .read-more a:after {
+  content: "\f061";
+  font-family: FontAwesome;
+  margin-left: -10px;
+  opacity: 0;
+  vertical-align: middle;
+  transition: margin 0.3s, opacity 0.3s;
+}
+.blog-card .description .read-more a:hover:after {
+  margin-left: 5px;
+  opacity: 1;
+}
+.blog-card p {
+  position: relative;
+  margin: 1rem 0 0;
+}
+.blog-card p:first-of-type {
+  margin-top: 1.25rem;
+}
+.blog-card p:first-of-type:before {
+  content: "";
+  position: absolute;
+  height: 5px;
+  background: #ffffff;
+  width: 35px;
+  top: -0.75rem;
+  border-radius: 3px;
+}
+.blog-card:hover .details {
+  left: 0%;
+}
+@media (min-width: 640px) {
+  .blog-card {
+    flex-direction: row;
+    max-width: 700px;
+  }
+  .blog-card .meta {
+    flex-basis: 40%;
+    height: auto;
+  }
+  .blog-card .description {
+    flex-basis: 60%;
+  }
+  .blog-card .description:before {
+    transform: skewX(-3deg);
+    content: "";
+    background: #fff;
+    width: 30px;
+    position: absolute;
+    left: -10px;
+    top: 0;
+    bottom: 0;
+    z-index: -1;
+  }
+  .blog-card.alt {
+    flex-direction: row-reverse;
+  }
+  .blog-card.alt .description:before {
+    left: inherit;
+    right: -10px;
+    transform: skew(3deg);
+  }
+  .blog-card.alt .details {
+    padding-left: 25px;
+  }
+}
+/*Greatest Accomplishments End*/
+
+/*Impact On History*/
+.card-title {
+  color: white;
+  font-family: "Josefin Sans", sans-serif;
+  text-align: center;
+  margin-top: 3%;
+}
+
+.history {
+  margin-top: 4%;
+}
+.history1 {
+  margin-left: 4%;
+  margin-top: 4%;
+}
+
+.vid {
+  display: block;
+  margin: auto;
+  text-align: center;
+  margin-top: 6%;
+  border-width: 3px;
+  padding: 2rem;
+}
+
+iframe {
+  box-shadow: 6px 6px 6px black;
+}
+/*Impact On History End*/
+
+/*Artwork*/
+/*photobanner*/
+.photobanner {
+  height: 220px;
+  width: 8640px;
+  margin-top: 6%;
+  margin-bottom: 10%;
+}
+
+/*keyframe animations*/
+.first {
+  -webkit-animation: bannermove 50s linear infinite;
+  -moz-animation: bannermove 50s linear infinite;
+  -ms-animation: bannermove 50s linear infinite;
+  -o-animation: bannermove 50s linear infinite;
+  animation: bannermove 50s linear infinite;
+}
+
+img.first {
+  height: 270px;
+  width: 500px;
+  border: 1rem solid rgb(199, 199, 199);
+}
+
+img.move {
+  height: 270px;
+  width: 500px;
+  border: 1rem solid rgb(199, 199, 199);
+}
+
+img.first:hover {
+  border: 1rem solid #012302;
+}
+
+img.move:hover {
+  border: 1rem solid #012302;
+}
+
+@keyframes "bannermove" {
+  0% {
+    margin-left: 0px;
+  }
+  100% {
+    margin-left: -5746px;
+  }
+}
+
+@-moz-keyframes bannermove {
+  0% {
+    margin-left: 0px;
+  }
+  100% {
+    margin-left: -5746px;
+  }
+}
+
+@-webkit-keyframes "bannermove" {
+  0% {
+    margin-left: 0px;
+  }
+  100% {
+    margin-left: -5746px;
+  }
+}
+
+@-ms-keyframes "bannermove" {
+  0% {
+    margin-left: 0px;
+  }
+  100% {
+    margin-left: -5746px;
+  }
+}
+
+@-o-keyframes "bannermove" {
+  0% {
+    margin-left: 0px;
+  }
+  100% {
+    margin-left: -5746px;
+  }
+}
+.photobanner {
+  height: 250px;
+  width: 8700px;
+  margin-top: 6%;
+}
+
+.photobanner img.first {
+  -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  -ms-transition: all 1s ease;
+  transition: all 1s ease;
+}
+
+.photobanner img.move {
+  -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  -ms-transition: all 1s ease;
+  transition: all 1s ease;
+}
+
+.photobanner img.first:hover {
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
+  cursor: pointer;
+
+  -webkit-box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
+}
+
+.photobanner img.move:hover {
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
+  cursor: pointer;
+
+  -webkit-box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
+}
+/*Artwork End*/
+
+/*footer style*/
+.footer {
+  height: auto;
+  margin-top: 4%;
+  padding: 25px 0;
+  background-color: rgba(65, 65, 65, 0.5);
+  border: 1px solid rgb(255, 255, 255);
+  margin-bottom: 0.3%;
+}
+
+.list-inline-item {
+  justify-content: space-between;
+}
+/*Footer End*/
